# nifti_clib

./: .clang-tidy  .codespellrc  .gitignore  .travis.yml  :wa  CMakeLists.txt  CMakeLists.txt.orig  CTestConfig.cmake  Dockerfile  LICENSE  Makefile  README  README.md  Updates.txt
Clibs/: CMakeLists.txt  Makefile  Updates.txt
Clibs/Testing/nifti.regress_test/: @show.diffs  @test
Clibs/Testing/nifti_regress_test/: @test
Clibs/niftilib/: nifti1_io.c  nifti1_io.h
Clibs/utils/: Makefile  nifti_stats.c
Clibs/znzlib/: Makefile  config.h  znzlib.c  znzlib.h
Jlibs/niftijlib/: EndianCorrectInputStream.java  EndianCorrectOutputStream.java  Makefile  Nifti1Dataset.java  README  TestNifti1Api.java  updates.txt
Matlibs/: README.txt  license.txt
Matlibs/matlab/: Makefile  make.m  spm_flip_analyze_images.m
Matlibs/matlab/@file_array/: Contents.m  cat.m  ctranspose.m  disp.m  display.m  double.m  end.m  fieldnames.m  file_array.m  horzcat.m  isnan.m  length.m  loadobj.m  ndims.m  numel.m  numeric.m  permute.m  reshape.m  size.m  subsasgn.m  subsref.m  transpose.m  vertcat.m
Matlibs/matlab/@file_array/private/: datatypes.m  dim.m  dtype.m  file2mat.m  fname.m  mat2file.m  mystruct.m  offset.m  permission.m  resize_scales.m  scl_inter.m
Matlibs/matlab/@file_array/private/src/: file2mat.c  mat2file.c
Matlibs/matlab/@nifti/: Contents.m  create.m  disp.m  display.m  fieldnames.m  nifti.m  structn.m  subsasgn.m  subsref.m
Matlibs/matlab/@nifti/private/: M2Q.m  Q2M.m  decode_qform0.m  empty_hdr.m  encode_qform0.m  findindict.m  getdict.m  mayo2nifti1.m  mayostruc.m  nifti_stats.m  niftistruc.m  read_extras.m  read_hdr.m  read_hdr_raw.m  spm_existfile.m  spm_fileparts.m  write_extras.m  write_hdr_raw.m
Matlibs/matlab/@nifti/private/src/: nifti1.h  nifti_stats.c  nifti_stats_mex.c
Testing/: CMakeLists.txt
Testing/niftilib/: CMakeLists.txt
cifti/: CMakeLists.txt  Makefile  afni_xml.c  afni_xml_io.c  afni_xml_io.h  cifti_tool.c
cmake/: :w  NIFTIConfig.cmake  nifti_common.cmake  nifti_macros.cmake  travis_dashboard.cmake
conda.build/: meta.yaml
examples/: CMakeLists.txt
fsliolib/: CMakeLists.txt  fslio.c  fslio.h
fsliolib/examples/: CMakeLists.txt
nifti2/: CMakeLists.txt  Makefile  clib_02_nifti2.c  nifti2.pc.in  nifti2_io.c  nifti2_io.h  nifti2_io_version.h  nifti_tool.c  nifti_tool.h
nifti2/nifti_regress_test/cmake_testscripts/: comment_test.sh  fetch_data_test.sh
nifticdf/: CMakeLists.txt  Makefile  nifticdf.c  nifticdf.h  nifticdf.pc.in  nifticdf_version.h
niftilib/: CMakeLists.txt  Makefile  nifti1_io.c  nifti1_io.h  nifti1_io_version.h  nifti1_test.c  nifti1_tool.c  nifti1_tool.h  nifti_tester001.c  niftiio.pc.in
real_easy/: CMakeLists.txt  nifti1_read_write.c  nifti_cdf_program.c
real_easy/parent_project_demo/: CMakeLists.txt
scripts/: cmakeRemoveBlockEndCruft.sh  cmakeToLowerCase.sh
utils/: CMakeLists.txt  nifti_stats.c
webpage/: README  contacts.html  debian.html  home.html  index.html  nifti.css  nifti1_overview.html  niftilib_overview.html  side.html
webpage/c_api_html/: annotated.html  config_h-source.html  dbh_h-source.html  files.html  fslio_c.html  fslio_h-source.html  fslio_h.html  functions.html  globals.html  group_FSL_TYPE.html  group_NIFTI1_DATATYPES.html  group_NIFTI1_DATATYPE_ALIASES.html  group_NIFTI1_INTENT_CODES.html  group_NIFTI1_SLICE_ORDER.html  group_NIFTI1_UNITS.html  group_NIFTI1_XFORM_CODES.html  index.html  modules.html  nifti1_h-source.html  nifti1_h.html  nifti1_io_c.html  nifti1_io_h-source.html  nifti1_io_h.html  struct_FSLIO-members.html  struct_FSLIO.html  struct_nifti_1_header-members.html  struct_nifti_1_header.html  struct_nifti_image-members.html  struct_nifti_image.html  znzlib_c.html  znzlib_h-source.html
webpage/java_api_html/: EndianCorrectInputStream.html  EndianCorrectOutputStream.html  Nifti1Dataset.html  allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  packages.html
webpage/mat_api_html/: README.txt
znzlib/: CMakeLists.txt  znzlib.c  znzlib.h  znzlib.pc.in  znzlib_version.h
